--- a/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
+++ b/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
@@ -3869,6 +3869,7 @@
     <Content Include="Views\Categories\AllCategories.cshtml" />
     <Content Include="Views\Admin\AdminDashBoard.cshtml" />
     <Content Include="Views\Admin\Products.cshtml" />
+    <Content Include="Views\Product\Search.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3881,7 +3882,6 @@
     <Folder Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\css\" />
     <Folder Include="MEDICAL STORE\plugins\greensock\" />
     <Folder Include="MEDICAL STORE\plugins\scrollmagic\" />
-    <Folder Include="Views\Product\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
