--- a/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
+++ b/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
@@ -1755,8 +1755,11 @@
     <Content Include="Content\fontawesome-free-5.13.0-web\webfonts\fa-regular-400.svg" />
     <Content Include="Content\fontawesome-free-5.13.0-web\webfonts\fa-solid-900.svg" />
     <Content Include="Content\form.css" />
+    <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\shop_styles.css" />
     <Content Include="Global.asax" />
     <Content Include="Images\1.jpg" />
+    <Content Include="Images\shop_background.jpg" />
     <Content Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\webfonts\fa-brands-400.eot" />
     <Content Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\webfonts\fa-brands-400.ttf" />
     <Content Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\webfonts\fa-brands-400.woff" />
@@ -2054,7 +2057,7 @@
     <Content Include="MEDICAL STORE\js\myscr.js" />
     <Content Include="MEDICAL STORE\js\product_custom.js" />
     <Content Include="MEDICAL STORE\js\regular_custom.js" />
-    <Content Include="MEDICAL STORE\js\shop_custom.js" />
+    <Content Include="Scripts\shop_custom.js" />
     <Content Include="MEDICAL STORE\plugins\easing\easing.js" />
     <Content Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\webfonts\fa-brands-400.svg" />
     <Content Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\webfonts\fa-regular-400.svg" />
@@ -2064,16 +2067,16 @@
     <Content Include="Scripts\ScrollToPlugin.min.js" />
     <Content Include="Scripts\TimelineMax.min.js" />
     <Content Include="Scripts\TweenMax.min.js" />
-    <Content Include="MEDICAL STORE\plugins\Isotope\isotope.pkgd.min.js" />
+    <Content Include="Scripts\isotope.pkgd.min.js" />
     <Content Include="MEDICAL STORE\plugins\jquery-ui-1.12.1.custom\jquery-ui.css" />
-    <Content Include="MEDICAL STORE\plugins\jquery-ui-1.12.1.custom\jquery-ui.js" />
+    <Content Include="Scripts\jquery-ui.js" />
     <Content Include="MEDICAL STORE\plugins\OwlCarousel2-2.2.1\ajax-loader.gif" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\owl.carousel.css" />
     <Content Include="Scripts\owl.carousel.js" />
     <Content Include="Content\owl.theme.default.css" />
     <Content Include="MEDICAL STORE\plugins\OwlCarousel2-2.2.1\owl.video.play.png" />
-    <Content Include="MEDICAL STORE\plugins\parallax-js-master\parallax.min.js" />
+    <Content Include="Scripts\parallax.min.js" />
     <Content Include="Scripts\ScrollMagic.min.js" />
     <Content Include="MEDICAL STORE\plugins\slick-1.8.0\ajax-loader.gif" />
     <Content Include="MEDICAL STORE\plugins\slick-1.8.0\fonts\slick.svg" />
@@ -3739,7 +3742,7 @@
     <Content Include="MEDICAL STORE\styles\regular_responsive.css" />
     <Content Include="MEDICAL STORE\styles\regular_styles.css" />
     <Content Include="Content\responsive.css" />
-    <Content Include="MEDICAL STORE\styles\shop_responsive.css" />
+    <Content Include="Content\shop_responsive.css" />
     <Content Include="MEDICAL STORE\styles\shop_styles.css" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -3832,6 +3835,7 @@
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -3870,6 +3874,7 @@
     <Content Include="Views\Admin\AdminDashBoard.cshtml" />
     <Content Include="Views\Admin\Products.cshtml" />
     <Content Include="Views\Product\Search.cshtml" />
+    <Content Include="Views\Shop\Shop.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -3881,6 +3886,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="MEDICAL STORE\plugins\fontawesome-free-5.0.1\css\" />
     <Folder Include="MEDICAL STORE\plugins\greensock\" />
+    <Folder Include="MEDICAL STORE\plugins\Isotope\" />
+    <Folder Include="MEDICAL STORE\plugins\parallax-js-master\" />
     <Folder Include="MEDICAL STORE\plugins\scrollmagic\" />
   </ItemGroup>
   <ItemGroup>
