-Add cart controller and design

--- a/MdeicalStoreApplication/MedicalStore/Views/web.config
+++ b/MdeicalStoreApplication/MedicalStore/Views/web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="MedicalStore" />
+        <add namespace="MedicalStore.Models" />
+        <add namespace="MedicalStore.Helpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
