--- a/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
+++ b/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
@@ -2048,14 +2048,14 @@
     <Content Include="MEDICAL STORE\index.html" />
     <Content Include="MEDICAL STORE\js\blog_custom.js" />
     <Content Include="MEDICAL STORE\js\blog_single_custom.js" />
-    <Content Include="MEDICAL STORE\js\cart_custom.js" />
+    <Content Include="Scripts\cart_custom.js" />
     <Content Include="MEDICAL STORE\js\contact_custom.js" />
     <Content Include="Scripts\custom.js" />
     <Content Include="MEDICAL STORE\js\form.js" />
     <Content Include="MEDICAL STORE\js\jquery-3.3.1.min.js" />
     <Content Include="MEDICAL STORE\js\jquery-3.5.1.min.js" />
     <Content Include="MEDICAL STORE\js\myscr.js" />
-    <Content Include="MEDICAL STORE\js\product_custom.js" />
+    <Content Include="Scripts\product_custom.js" />
     <Content Include="MEDICAL STORE\js\regular_custom.js" />
     <Content Include="Scripts\shop_custom.js" />
     <Content Include="MEDICAL STORE\plugins\easing\easing.js" />
@@ -2103,8 +2103,8 @@
     <Content Include="MEDICAL STORE\styles\bootstrap4\bootstrap.min.css" />
     <Content Include="MEDICAL STORE\styles\bootstrap4\bootstrap.min.js" />
     <Content Include="MEDICAL STORE\styles\bootstrap4\popper.js" />
-    <Content Include="MEDICAL STORE\styles\cart_responsive.css" />
-    <Content Include="MEDICAL STORE\styles\cart_styles.css" />
+    <Content Include="Content\cart_responsive.css" />
+    <Content Include="Content\cart_styles.css" />
     <Content Include="MEDICAL STORE\styles\contact_responsive.css" />
     <Content Include="MEDICAL STORE\styles\contact_styles.css" />
     <Content Include="MEDICAL STORE\styles\fontawesome-free-5.13.0-web\css\brands.css" />
@@ -3832,6 +3832,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -3876,6 +3877,7 @@
     <Content Include="Views\Shop\Shop.cshtml" />
     <Content Include="Views\Shop\ProductDetails.cshtml" />
     <Content Include="Views\Admin\Products.cshtml" />
+    <Content Include="Views\Cart\CartContent.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
