--- a/MdeicalStoreApplication/MedicalStore/Views/web.config
+++ b/MdeicalStoreApplication/MedicalStore/Views/web.config
@@ -19,6 +19,7 @@
         <add namespace="MedicalStore" />
         <add namespace="MedicalStore.Models" />
         <add namespace="MedicalStore.Helpers" />
+        <add namespace="MedicalStore.Models.Enums" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
