--- a/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
+++ b/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
@@ -3885,7 +3885,6 @@
     <Content Include="Views\Shop\Shop.cshtml" />
     <Content Include="Views\Shop\ProductDetails.cshtml" />
     <Content Include="Views\Admin\Products.cshtml" />
-    <Content Include="Views\Cart\CartContent.cshtml" />
     <Content Include="Views\Cart\CartCounter.cshtml" />
     <Content Include="Views\Admin\Categories.cshtml" />
     <Content Include="Views\Home\Error.cshtml" />
@@ -3894,6 +3893,9 @@
     <Content Include="Views\Order\DoneOrder.cshtml" />
     <Content Include="Views\Order\OrdersContent.cshtml" />
     <Content Include="Views\Order\OrderDetails.cshtml" />
+    <Content Include="Views\Cart\Cart.cshtml" />
+    <Content Include="Views\Cart\CartContent.cshtml" />
+    <Content Include="Views\Cart\EditCart.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
