--- a/MdeicalStoreApplication/MedicalStore/packages.config
+++ b/MdeicalStoreApplication/MedicalStore/packages.config
@@ -16,7 +16,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="PayPal" version="1.9.1" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.6.0" targetFramework="net472" />
 </packages>
