--- a/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
+++ b/MdeicalStoreApplication/MedicalStore/MedicalStore.csproj
@@ -1779,6 +1779,7 @@
     <Content Include="Images\char_3.png" />
     <Content Include="Images\char_4.png" />
     <Content Include="Images\Hagar11.jpeg" />
+    <Content Include="Images\letter-m.png" />
     <Content Include="Images\mirnna1.jpeg" />
     <Content Include="Images\renad1.jpeg" />
     <Content Include="Images\shop_background.jpg" />
